update to JDK 11