@@ -41,6 +41,8 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -91,12 +93,6 @@
             <version>4.4.9</version>
         </dependency>
         <dependency>
-            <groupId>org.javassist</groupId>
-            <artifactId>javassist</artifactId>
-            <version>3.18.1-GA</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-json-org</artifactId>
             <version>2.9.4</version>
@@ -124,19 +120,23 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <compilerArguments>
-                        <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>
+                    <compilerArgs>
+                        <arg>--add-exports</arg><arg>java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.desktop/sun.awt=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.ftp=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg><arg>java.base/sun.net.www.protocol.file=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14.1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <includes>
                         <include>**/BG*.java</include>
